--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ ul li::before{
     height: 28px;
     width: 28px;
     border-radius: 50%;
-    background-image: url(images/radio-button.png);
+    background-image: url(radio-button.png);
     background-size: cover;
     background-position: center;
     top: 8px;
@@ -81,7 +81,7 @@ ul li.checked{
     text-decoration: line-through;
 }
 ul li.checked::before{
-    background-image: url(images/check.png);
+    background-image: url(check.png);
 }
 ul li span{
     position: absolute;
